--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "gatsby-starter-newage",
+  "name": "jobs-landing-page",
   "version": "0.0.1",
-  "description": "Gatsby.js V2 starter template based on New age by startbootstrap",
+  "description": "Job$ Marketplace Landing Page",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/anubhavsrivastava/gatsby-starter-newage.git"
+    "url": "git+https://github.com/markfoster314/Jobs.git"
   },
   "author": {
-    "name": "Anubhav Srivastava",
-    "email": "anubhav.srivastava00@gmail.com"
+    "name": "Mark Foster",
+    "email": "markfoster314@yahoo.com"
   },
   "dependencies": {
     "gatsby": "^2.20.2",
     "gatsby-plugin-manifest": "^2.3.1",
     "gatsby-plugin-offline": "^3.1.0",
     "gatsby-plugin-react-helmet": "^3.2.0",
+    "gatsby-plugin-s3": "^0.3.8",
     "gatsby-plugin-sass": "^2.2.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
@@ -27,11 +28,11 @@
   "scripts": {
     "develop": "gatsby develop",
     "build": "npm run clean && gatsby build",
-    "deploy": "npm run clean && gatsby build --prefix-paths && gh-pages -d public",
     "serve": "gatsby serve",
     "clean": "rimraf .cache public",
     "format": "prettier --write '**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gatsby-plugin-s3 deploy"
   },
   "devDependencies": {
     "gh-pages": "^2.0.1",
@@ -45,7 +46,7 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/anubhavsrivastava/gatsby-starter-newage/issues"
+    "url": "https://github.com/markfoster314/Jobs/issues"
   },
-  "homepage": "https://github.com/anubhavsrivastava/gatsby-starter-newage#readme"
+  "homepage": "https://github.com/markfoster314/Jobs#readme"
 }
